--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,20 @@
+click==8.1.7
+colorama==0.4.6
+Flask==2.2.5
 Flask-SQLAlchemy==0.6
 Flask-WTF==1.2.1
+greenlet==3.0.1
 gunicorn==21.2.0
+itsdangerous==2.0.1
+Jinja2==3.1.3
+MarkupSafe==2.1.3
 packaging==23.2
+pip==23.3.1
 psycopg2-binary==2.9.9
 PyMySQL==1.1.0
+setuptools==68.2.2
+SQLAlchemy==2.0.25
 typing_extensions==4.10.0
+Werkzeug==2.3.8
+wheel==0.41.2
 WTForms==3.1.2
