--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 click==8.1.7
 colorama==0.4.6
 Flask==2.2.5
-Flask-SQLAlchemy==0.6
+Flask-SQLAlchemy
 Flask-WTF==1.2.1
 greenlet==3.0.1
 gunicorn==21.2.0
