--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,15 @@
 click==8.1.7
 colorama==0.4.6
 Flask==2.2.5
-Flask-SQLAlchemy
+Flask-SQLAlchemy==0.6
 Flask-WTF==1.2.1
 greenlet==3.0.1
 gunicorn==21.2.0
 itsdangerous==2.0.1
 Jinja2==3.1.3
 MarkupSafe==2.1.3
+mysql==0.0.3
+mysqlclient==2.2.4
 packaging==23.2
 pip==23.3.1
 psycopg2-binary==2.9.9
