--- a/requirements.txt
+++ b/requirements.txt
@@ -1,70 +1,23 @@
-asttokens==2.2.1
-backcall==0.2.0
-certifi==2022.12.7
-charset-normalizer==3.1.0
-click==8.1.3
+blinker==1.7.0
+click==8.1.7
 colorama==0.4.6
-comm==0.1.2
-debugpy==1.6.6
-decorator==5.1.1
-empyrical==0.5.5
-exceptiongroup==1.2.0
-executing==1.2.0
-Flask==2.2.3
-Flask-MySQLdb==1.0.1
-Flask-SQLAlchemy==3.0.3
+Flask==3.0.2
+Flask-SQLAlchemy==3.1.1
 Flask-WTF==1.2.1
-gplearn==0.4.2
-graphviz==0.20.1
-greenlet==2.0.2
-idna==3.4
-iniconfig==2.0.0
-ipykernel==6.21.1
-ipython==8.9.0
+greenlet==3.0.1
+gunicorn==21.2.0
 itsdangerous==2.1.2
-jedi==0.18.2
-Jinja2==3.1.2
-joblib==1.2.0
-jupyter_client==8.0.2
-jupyter_core==5.2.0
-lxml==4.9.2
-MarkupSafe==2.1.2
-matplotlib-inline==0.1.6
-mysqlclient==2.1.1
-nest-asyncio==1.5.6
-numpy==1.24.2
-packaging==23.0
-pandas==2.0.0
-pandas-datareader==0.10.0
-parso==0.8.3
-pickleshare==0.7.5
-platformdirs==2.6.2
-pluggy==1.4.0
-prompt-toolkit==3.0.36
-psutil==5.9.4
-psycopg2==2.9.9
-pure-eval==0.2.2
-Pygments==2.14.0
-pytest==8.0.2
-python-dateutil==2.8.2
-pytz==2023.3
-pywin32==305
-pyzmq==25.0.0
-requests==2.30.0
-scikit-learn==1.2.2
-scipy==1.10.1
-shortuuid==1.0.12
-six==1.16.0
-SQLAlchemy==2.0.7
-stack-data==0.6.2
-threadpoolctl==3.1.0
-tomli==2.0.1
-tornado==6.2
-traitlets==5.9.0
-typing_extensions==4.5.0
-tzdata==2023.3
-urllib3==2.0.2
-wcwidth==0.2.6
-Werkzeug==2.2.3
+Jinja2==3.1.3
+MarkupSafe==2.1.3
+mysql==0.0.3
+mysqlclient==2.2.4
+packaging==23.2
+pip==23.3.1
+psycopg2-binary==2.9.9
+PyMySQL==1.1.0
+setuptools==68.2.2
+SQLAlchemy==2.0.25
+typing_extensions==4.10.0
+Werkzeug==3.0.1
+wheel==0.41.2
 WTForms==3.1.2
-xarray==2023.4.2
